--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -27,7 +27,7 @@ tasks:
 
   connect-gen-js:
     desc: connect generate js proto
-    aliases: [cjs]
+    aliases: [genjs]
     cmds:
       - |
         cd js && \
@@ -37,4 +37,16 @@ tasks:
           --es_opt target=js \
           --connect-es_out src/gen/eliza/v1 \
           --connect-es_opt target=js \
+          eliza.proto
+
+  connect-gen-go:
+    desc: connect generate js proto
+    aliases: [gengo]
+    cmds:
+      - |
+        cd go && \
+        mkdir -p internal/gen/eliza/v1/ && \
+        protoc -I ../proto \
+          --go_out internal/gen/eliza/v1 --go_opt=paths=source_relative \
+          --connect-go_out internal/gen/eliza/v1 --connect-go_opt=paths=source_relative \
           eliza.proto
