--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -44,8 +44,8 @@ tasks:
     aliases: [gengo]
     cmds:
       - |
-        mkdir -p internal/gen/eliza/v1/ && \
+        mkdir -p internal/gen/eliza/ && \
         protoc -I ./proto \
-          --go_out internal/gen/eliza/v1 --go_opt=paths=source_relative \
-          --connect-go_out internal/gen/eliza/v1 --connect-go_opt=paths=source_relative \
+          --go_out internal/gen/eliza --go_opt=paths=source_relative \
+          --connect-go_out internal/gen/eliza --connect-go_opt=paths=source_relative \
           eliza.proto
