--- a/js/package.json
+++ b/js/package.json
@@ -14,12 +14,11 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "@bufbuild/buf": "^1.21.0-1",
-    "@bufbuild/connect": "^0.10.0",
-    "@bufbuild/connect-web": "^0.10.0",
-    "@bufbuild/protobuf": "^1.2.1",
-    "@bufbuild/protoc-gen-connect-es": "^0.10.0",
-    "@bufbuild/protoc-gen-es": "^1.2.1",
-    "esbuild": "^0.17.18"
+    "@bufbuild/buf": "^1.26.1",
+    "@bufbuild/connect": "^0.13.0",
+    "@bufbuild/connect-web": "^0.13.0",
+    "@bufbuild/protobuf": "^1.3.1",
+    "@bufbuild/protoc-gen-connect-es": "^0.13.0",
+    "@bufbuild/protoc-gen-es": "^1.3.1"
   }
 }
